test/pass/api/string/string_split_no_match.lly
if "123".split(" ") != ["123"]:
    stderr.print("Failed.")
